--- a/app.json
+++ b/app.json
@@ -19,7 +19,15 @@
           "photosPermission": "The app accesses your photos to let you share them with your friends.",
           "cameraPermission": "Allow $(PRODUCT_NAME) to access camera."
         }
-      ]
+      ],
+       [
+         "expo-camera",
+         {
+           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+           "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+           "recordAudioAndroid": true
+         }
+       ]
     ],
     "ios": {
       "jsEngine": "jsc",
