--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-camera": "~14.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
