--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^2.2.1",
+    "@stripe/stripe-react-native": "~0.35.1",
     "@types/react": "~18.2.45",
     "axios": "^1.6.8",
     "expo": "~50.0.8",
+    "expo-camera": "~14.1.3",
     "expo-checkbox": "~2.7.0",
+    "expo-file-system": "~16.0.9",
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-location": "^16.5.5",
+    "expo-media-library": "~15.9.2",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -42,9 +46,8 @@
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
     "typescript": "^5.3.0",
-    "expo-file-system": "~16.0.9",
-    "expo-media-library": "~15.9.2",
-    "expo-camera": "~14.1.3"
+    "expo-linking": "~6.2.2",
+    "expo-web-browser": "~12.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
